--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.gusarisna.pratikum"
-        minSdkVersion 25
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -20,7 +20,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.sackcentury:shinebutton:0.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.curioustechizen.android-ago:library:1.4.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:28.0.0'
