--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.Login">
+        <activity android:name=".activity.Login" />
+        <activity android:name=".activity.Register" />
+        <activity android:name=".activity.Latihan" />
+        <activity android:name=".activity.Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.Register" />
-        <activity android:name=".activity.Latihan" />
-        <activity android:name=".activity.Home" />
-        <activity android:name=".adapter.EditProfile"></activity>
+        <activity android:name=".adapter.EditProfile" />
+        <activity android:name=".activity.TambahPostingan" />
+        <activity android:name=".activity.EditPostingan" />
+        <activity android:name=".activity.EditProfile"></activity>
     </application>
 
 </manifest>
