--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation ('net.gotev:uploadservice:2.1') {
+    implementation('net.gotev:uploadservice:2.1') {
         exclude group: 'com.android.support'
         exclude module: 'appcompat-v7'
         exclude module: 'support-v4'
@@ -46,4 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
